--- a/TPC_equipo-2/dominio/dominio.csproj
+++ b/TPC_equipo-2/dominio/dominio.csproj
@@ -43,9 +43,11 @@
   <ItemGroup>
     <Compile Include="Especialidad.cs" />
     <Compile Include="Especialista.cs" />
+    <Compile Include="EstadoTurno.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Personal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Turno.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
