--- a/TPC_equipo-2/TPC_equipo-2/TPC_equipo-2.csproj
+++ b/TPC_equipo-2/TPC_equipo-2/TPC_equipo-2.csproj
@@ -71,6 +71,7 @@
     <Content Include="Especialistas.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
+    <Content Include="Pacientes.aspx" />
     <Content Include="Scripts\Scripts.js" />
     <Content Include="Usuarios.aspx" />
     <Content Include="Web.config" />
@@ -106,6 +107,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pacientes.aspx.cs">
+      <DependentUpon>Pacientes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pacientes.aspx.designer.cs">
+      <DependentUpon>Pacientes.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
