Armado de pantalla de turnos y modificacion de clase turno

--- a/TPC_equipo-2/TPC_equipo-2/TPC_equipo-2.csproj
+++ b/TPC_equipo-2/TPC_equipo-2/TPC_equipo-2.csproj
@@ -73,6 +73,7 @@
     <Content Include="Login.aspx" />
     <Content Include="Pacientes.aspx" />
     <Content Include="Scripts\Scripts.js" />
+    <Content Include="Turnos.aspx" />
     <Content Include="Usuarios.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -122,6 +123,13 @@
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Turnos.aspx.cs">
+      <DependentUpon>Turnos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Turnos.aspx.designer.cs">
+      <DependentUpon>Turnos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Usuarios.aspx.cs">
       <DependentUpon>Usuarios.aspx</DependentUpon>
