--- a/TPC_equipo-2/Negocio/negocio.csproj
+++ b/TPC_equipo-2/Negocio/negocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="EspecialidadNegocio.cs" />
+    <Compile Include="JornadaNegocio.cs" />
     <Compile Include="PacienteNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioNegocio.cs" />
