--- a/TPC_equipo-2/dominio/dominio.csproj
+++ b/TPC_equipo-2/dominio/dominio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Jornada.cs" />
     <Compile Include="Paciente.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="EstadoTurno.cs" />
