--- a/TPC_equipo-2/Negocio/negocio.csproj
+++ b/TPC_equipo-2/Negocio/negocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="JornadaNegocio.cs" />
     <Compile Include="PacienteNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TurnoNegocio.cs" />
     <Compile Include="UsuarioNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
