--- a/TPC_equipo-2/Negocio/negocio.csproj
+++ b/TPC_equipo-2/Negocio/negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="EspecialidadNegocio.cs" />
     <Compile Include="JornadaNegocio.cs" />
+    <Compile Include="MailService.cs" />
     <Compile Include="PacienteNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TurnoNegocio.cs" />
