--- a/TPC_equipo-2/TPC_equipo-2/TPC_equipo-2.csproj
+++ b/TPC_equipo-2/TPC_equipo-2/TPC_equipo-2.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Configuracion.aspx" />
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\Styles.css" />
     <Content Include="Especialidades.aspx" />
     <Content Include="Especialistas.aspx" />
